# Argentum-MALT

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Manual de Usuario.md  README.md  client_config.toml  compile_commands.json  install.sh  install_deps.sh
assets/Dat/: Haracin Pesca Facil.txt  Motd.ini  NombresInvalidos.txt  NuevoSastre.txt  Quests_2023.txt  RopajesNuevo.txt  Variables de NPCs.txt  logros.ini  tutoriales.ini
assets/Manifesto/: config.ini
assets/MiniMap/: translados.ini
assets/OUTPUT/: Configuracion.ini  DefaultKey.ini  DefaultSettings.ini  Teclas.ini
assets/init/: Effects.ini  FXs.ini  FarolCartelWE.ini  Remotes.ini  ambientacion.ini  cabezas.ini  cascos.ini  crafteo.ini  en_sugerencias.ini  graficos.ini  indices.ini  moldes.ini  sp_sugerencias.ini  sugerencias.ini  triggers.ini
assets/midi/: leame.txt
assets/wav/: Sonidos.txt
client/: CMakeLists.txt  app.cpp  app.h  chat_input.cpp  chat_input.h  client.cpp  client.h  client_protocol.cpp  client_protocol.h  config.cpp  config.h  engine.cpp  engine.h  game_renderer.cpp  game_renderer.h  login_controller.cpp  login_controller.h  login_renderer.cpp  login_renderer.h  main.cpp  menu_controller.cpp  menu_controller.h  menu_renderer.cpp  menu_renderer.h  move_controller.cpp  move_controller.h  player_stats.h  receiver.cpp  receiver.h  render_context.cpp  render_context.h  renderer.cpp  renderer.h  sender.h  texture_loader.cpp  texture_loader.h  ui_renderer.cpp  ui_renderer.h  world_renderer.cpp  world_renderer.h
client/audio/: audio_manager.cpp  audio_manager.h
client/chat/: chat_command_parser.cpp  chat_command_parser.h  chat_history.cpp  chat_history.h
client/config/: config.cpp  config.h  map_visuals_config.cpp  map_visuals_config.h  player_stats.h
client/core/: app.cpp  app.h  client.cpp  client.h  engine.cpp  engine.h  game_controller.cpp  game_controller.h  map_render_data_builder.cpp  map_render_data_builder.h  server_event_handler.cpp  server_event_handler.h
client/input/: chat_input.cpp  chat_input.h  move_controller.cpp  move_controller.h
client/network/: client_protocol.cpp  client_protocol.h  receiver.h  sender.cpp  sender.h
client/render/: button.h  create_character_renderer.cpp  create_character_renderer.h  form_widgets.cpp  form_widgets.h  geometry.h  inventory_renderer.cpp  inventory_renderer.h  item_sprite_drawer.cpp  item_sprite_drawer.h  login_renderer.cpp  login_renderer.h  menu_renderer.cpp  menu_renderer.h  merchant_renderer.cpp  merchant_renderer.h  render_context.cpp  render_context.h  text_renderer.cpp  text_renderer.h  texture_cache.h  texture_loader.h  ui_renderer.cpp  ui_renderer.h  world_renderer.cpp  world_renderer.h
client/screen/: create_character_controller.cpp  create_character_controller.h  credential_form.cpp  credential_form.h  game_controller.cpp  game_controller.h  game_renderer.cpp  game_renderer.h  login_controller.cpp  login_controller.h  menu_controller.cpp  menu_controller.h  merchant_controller.cpp  merchant_controller.h  server_event_handler.cpp  server_event_handler.h
common/: CMakeLists.txt  config.cpp  config.h  equipable_items.cpp  equipable_items.h  error_logger.h  item.cpp  item.h  item_catalog.cpp  item_catalog.h  map_type.h  messages.h  protocol.cpp  protocol.h  queue.h  rng.cpp  rng.h  socket.cpp  socket.h  visit.h
config/: city.toml  city_test.toml  client.toml  common.toml  common_tilemap.toml  dungeon.toml  dungeon2.toml  dungeon3.toml  items.toml  map_list.toml  npcs.toml  server.toml
config/visuals/: city.toml  dungeon2.toml  dungeon3.toml
data/: bank.idx  clans.idx  inventory.idx  players.idx
docs/: DOCUMENTACION_TECNICA.md  _config.yml  consigna_Argentum.md  documentacion-tecnica.md  documentacion.md  index.md  manual-de-proyecto.md  manual-de-usuario.md  manual.md  protocol.md
docs/adr/: 0001-socket-shutdown-cross-thread-race.md
docs/images/: editor_save.cmapx
docs/uml/: attack.puml  client.puml  client_classes.puml  client_threads_architecture.puml  communication_mesagges_protocol.puml  communication_messages_protocol.puml  editor_classes.puml  editor_save.puml  editor_start_edit.puml  entities.puml  game_services.puml  login.puml  npc_ai.puml  server-classes.puml  server_classes.puml  server_threads_architecture.puml
editor/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  tile_palette.cpp  tile_palette.h  tilemap_document.cpp  tilemap_document.h
editor/core/: editor_controller.cpp  editor_controller.h  main_window.cpp  main_window.h
editor/document/: tilemap_document.cpp  tilemap_document.h
editor/input/: map_interaction.cpp  map_interaction.h
editor/io/: file_manager.cpp  file_manager.h  toml_serializer.cpp  toml_serializer.h
editor/render/: atlas_loader.cpp  atlas_loader.h  map_scene_renderer.cpp  map_scene_renderer.h
editor/ui/: dialogs.cpp  dialogs.h  tile_palette.cpp  tile_palette.h
server/: CMakeLists.txt  acceptor.cpp  acceptor.h  client_handler.cpp  client_handler.h  client_list_monitor.cpp  client_list_monitor.h  combat_controller.cpp  combat_controller.h  command_result.h  config.cpp  config.h  game.cpp  game.h  game_loop.cpp  game_loop.h  main.cpp  map.cpp  map.h  player.cpp  player.h  player_command.h  player_persistence.cpp  player_record.cpp  player_record.h  receiver.cpp  receiver.h  sender.cpp  sender.h  server.cpp  server.h  server_protocol.cpp  server_protocol.h
server/core/: config.cpp  config.h  game_loop.cpp  game_loop.h  server.cpp  server.h
server/game/: basic_skeleton.cpp  basic_skeleton.h  big_spider.cpp  big_spider.h  clan_command_handler.cpp  clan_command_handler.h  clan_manager.cpp  clan_manager.h  combat_controller.cpp  combat_controller.h  command_result.h  enemy_npc.cpp  (+44 more)
tests/: CMakeLists.txt  foo.cpp  test_clan_manager.cpp  test_client_handler.cpp  test_combat_controller.cpp  test_game.cpp  test_game_formulas.cpp  test_inventory.cpp  test_item_catalog.cpp  test_map_data_service.cpp  test_map_level_data_builder.cpp  test_map_render_data_builder.cpp  test_player.cpp  test_player_inventory.cpp  test_protocol_socketpair.cpp  test_toml_serializer.cpp
(+101 files in other folders)
